# mpol-analysis

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE-MIT  README.md  SECURITY.md  docker-compose.infra.yml  docker-compose.yml  mkdocs.yml  pyproject.toml  wrangler.toml
.github/workflows/: ci.yml  daily-pipeline.yml  data-publish.yml  deploy-app.yml  docker-publish.yml  docs-check.yml  gfw-ingest.yml  merge-reviews.yml  pages.yml  public-backtest-integration.yml  publish.yml
app/: .env.development  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
app/src/: App.tsx  index.css
config/: eval_labels.template.csv
config/launchagents/: io.arktrace.aisstream.gulfofguinea.plist  io.arktrace.aisstream.gulfofmexico.plist  io.arktrace.aisstream.hornofafrica.plist  io.arktrace.aisstream.middleeast.plist
data/demo/: public_eval_demo.duckdb  public_eval_demo_metadata.json
docker/: entrypoint.sh
docs/: analytics-overview.md  architecture.md  background.md  backtesting-validation.md  backtracking-runbook.md  causal-analysis.md  cost-scaling.md  custom-feeds.md  demo-data.md  deployment.md  development.md  evaluation-metrics.md  feature-engineering.md  field-investigation.md  index.md  introduction.md  investigation-test-cases.md  llm-grounding.md  local-e2e-test.md  local-llm-setup.md  pipeline-catalog.md  pipeline-operations.md  precision-improvement-plan.md  proposal-draft.md  r2-data-layout.md  ref-architecture.md  ref-background.md  ref-investigation-test-cases.md  ref-technical-solution.md  regional-playbooks.md  roadmap.md  scenarios.md  scoring-model.md  sop.md  study-guide.md  technical-solution.md  trial-specification.md  user-personas-ux-analysis.md
scripts/: aisstream_agents.sh  benchmark_rescore.py  build_gebco_mask.py  build_public_sanctions_demo_sample.py  capture_screenshots.py  check_score_regression.py  checkpoint_ducklake.py  configure_r2_cors.py  download_model.py  fetch_demo_data.sh  generate_dev_fixtures.py  gfw_ingest.py  install_aisstream_agent.sh  install_launchd_agents.sh  notify_metrics.py  prepare_public_sanctions_db.py  print_backtest_report.py  print_backtracking_report.py  print_monitor_summary.py  print_prelabel_report.py  print_review_feedback_report.py  print_watchlist_summary.py  publish_data.py  run_app.sh  run_backtracking.py  run_causal_reasoner.py  run_dev.sh  run_llama.sh  run_operations_shell.sh  run_pipeline.py  run_prelabel_evaluation.py  run_public_backtest_batch.py  run_review_feedback_evaluation.py  seed_demo_causal_effects.py  seed_demo_sar.py  seed_dev_watchlist.py  smoke_eo_feature.py  smoke_sar_feature.py  stop_app.sh  sync_r2.py  (+2 more)
src/api/: db.py  (+2 more)
tests/: conftest.py  test_ais_behavior.py  test_ais_csv.py  test_ais_stream.py  test_api.py  test_backtest.py  test_backtracking_runner.py  test_briefs.py  test_build_labels_name_match.py  test_causal_analysis.py  test_causal_effects_output.py  test_causal_rewind.py  test_causal_sanction.py  test_chat.py  test_check_score_regression.py  test_custom_feeds.py  test_enhancements_cap_vista.py  test_eo_fusion.py  test_feature_matrix.py  test_gdelt.py  test_gebco_depth_filter.py  test_gfw_eo_ingest.py  test_imo_mismatch.py  test_label_propagation.py  test_llm.py  test_marine_cadastre.py  test_merge_reviews_api.py  test_merge_reviews_lock.py  test_monitor.py  test_ownership_graph.py  test_prelabel_evaluation.py  test_public_data_backtest_integration.py  test_review_feedback_evaluation.py  test_reviews_api.py  test_sanctions.py  test_sar_detections.py  test_schema.py  test_scoring_pipeline.py  test_sync_r2_ais_dbs.py  test_validate.py  (+2 more)
(+164 files in other folders)
