[project]
name = "capvista-mpol-analysis"
version = "0.1.0"
description = "Shadow fleet candidate screening pipeline for Cap Vista Solicitation 5.0"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.1",
    "polars>=1.0",
    "neo4j>=5.0",
    "scikit-learn>=1.5",
    "shap>=0.46",
    "pyarrow>=17.0",
    "websockets>=12.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "h3>=3.7",
    "fastapi>=0.115",
    "uvicorn>=0.32",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
